# pet-tracker

./: APP_STORE_COPY_TR.md  DESTEK_METNI_TR.md  GIZLILIK_METNI_TR.md  README.md  RELEASE_CHECKLIST_TR.md  RELEASE_SMOKE_TEST_TR.md  RELEASE_STATUS_TR.md  pubspec.yaml
assets/branding/: logo_notes_tr.md
assets/screenshots/: README.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  security.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: auth.py  consultancy.py  outfits.py  wardrobe.py
backend/app/models/: __init__.py  base.py  entities.py  enums.py
backend/app/schemas/: auth.py  consultancy.py  outfits.py  wardrobe.py
backend/app/services/: auth_service.py  consultancy_service.py  outfit_service.py  storage.py  wardrobe_service.py
backend/docs/: api_endpoint_plan.md
db/: digital_wardrobe_schema.sql
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/activity/: activity_feed_page.dart
lib/care/: care_page.dart  care_repository.dart  care_task_model.dart
lib/caregiver/: caregiver_access_model.dart  caregiver_page.dart  caregiver_repository.dart
lib/db/: database_helper.dart
lib/documents/: document_gallery_page.dart  document_model.dart  document_repository.dart
lib/medication/: medication_form_page.dart  medication_list_page.dart  medication_log_model.dart  medication_model.dart  medication_repository.dart
lib/notifications/: notification_service.dart
lib/onboarding/: onboarding_page.dart
lib/pet/: pet_form_page.dart  (+4 more)
web/: index.html
(+19 files in other folders)
