[project]
name = "digital-wardrobe-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for the Digital Wardrobe Management SaaS."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "email-validator>=2.2.0",
  "PyJWT>=2.9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
